# tweag_gl_demo

./: CHANGELOG.md  SLIDES.md  base.frag  base.vert  base_toy.frag  base_toy.vert  default.nix  gl-sample.cabal  hie.yaml
app/: Main.hs  ShaderToy.hs
src/: SkolemEngine.hs
